chore: add nestjs/config support

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=
+APP_NAME=Nestjs Boilerplate
 APP_SHORT_NAME=nestjs
 
 DATABASE_TYPE=postgres
@@ -8,5 +8,6 @@ DATABASE_USERNAME=foo
 DATABASE_PASSWORD=bar
 DATABASE_NAME=foobar
 DATABASE_SYNCHRONIZE=false
+DATABASE_MAX_CONNECTIONS=10
 DATABASE_TZ=Asia/Manila
 DATABASE_PGTZ=Asia/Manila
