chore: add route configs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+PORT=3000
+
 APP_NAME=Nestjs Boilerplate
 APP_SHORT_NAME=nestjs
+APP_ROUTE_PREFIX=/api
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=postgres
