--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_SHORT_NAME=nestjs
 APP_ROUTE_PREFIX=/api
 
 DATABASE_TYPE=postgres
-DATABASE_HOST=postgres
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=foo
 DATABASE_PASSWORD=bar
