--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migration:run": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:run",
     "migration:revert": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:revert",
     "schema:drop": "npm run typeorm -- --dataSource=src/database/data-source.ts schema:drop",
-    "seed:run": "ts-node -r tsconfig-paths/register ./src/database/seeds/run-seed.ts",
+    "seeder:run": "ts-node -r tsconfig-paths/register ./src/database/seeders/run-seeders.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
