--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "compression": "^1.7.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "helmet": "^6.0.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
