--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -55,7 +56,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.3.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
